force-app/main/default/objects/HOVER_Webhook__c/HOVER_Webhook__c.object-meta.xml
<CustomObject>
    <label>HOVER Webhook</label>
    <nameField>
        <label>HOVER Webhook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HOVER Webhooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>