force-app/main/default/objects/HOVER_Webhook__c/fields/Content_Available__c.field-meta.xml
<CustomField>
    <fullName>Content_Available__c</fullName>
    <label>Content Available</label>
    <length>20</length>
    <type>Text</type>
</CustomField>