force-app/main/default/objects/HOVER_Webhook__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <length>50</length>
    <type>Text</type>
</CustomField>