force-app/main/default/objects/HOVER_Webhook__c/fields/HOVER_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>HOVER_Job_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HOVER Job</label>
    <referenceTo>HOVER_Job__c</referenceTo>
    <relationshipLabel>HOVER Webhooks</relationshipLabel>
    <relationshipName>HOVER_Webhooks</relationshipName>
    <type>Lookup</type>
</CustomField>