force-app/main/default/objects/HOVER_Webhook__c/fields/Job_Estimated_Hours_to_Completion__c.field-meta.xml
<CustomField>
    <fullName>Job_Estimated_Hours_to_Completion__c</fullName>
    <label>Job Estimated Hours to Completion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>