force-app/main/default/objects/HOVER_Webhook__c/fields/Job_External_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Job_External_Identifier__c</fullName>
    <label>Job External Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>