force-app/main/default/objects/HOVER_Webhook__c/fields/Webhook_ID__c.field-meta.xml
<CustomField>
    <fullName>Webhook_ID__c</fullName>
    <label>Webhook ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>