force-app/main/default/objects/HOVER_Webhook__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Event__c</columns>
    <columns>HOVER_Job_ID__c</columns>
    <columns>Job_External_Identifier__c</columns>
    <columns>State__c</columns>
    <columns>Webhook_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>